services/api/ytdl-api-producer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ytdl-producer-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ytdl-producer-api
  template:
    metadata:
      labels:
        app: ytdl-producer-api
    spec:
      containers:
      - name: ytdl-producer-api
        image: kamuri/ytb-dl-service:0.0.7
        args: ["server"]
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/ytdl/health
            port: 8080
            httpHeaders:
              - name: Host
                value: 127.0.0.1
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 10
        resources:
          limits:
            cpu: "0.1"
            memory: "800Mi"
