services/api/ytdl-api-producer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-test-api-service
spec:
  selector:
    app: python-test-api
  ports:
    - port: 8080
